--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,20 @@ media_folder: static/img
 public_folder: /img
 
 collections:
+ - name: 'careers'
+    label: 'Careers'
+    format: 'json'
+    folder: 'content/careers'
+    create: true
+    slug: '{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Start', name: 'start', widget: 'string' }
+      - { label: 'Salary', name: 'salary', widget: 'string' }
+      - { label: 'Summary', name: 'summary', widget: 'string' }
+      - { label: 'Perks', name: 'perks', widget: 'string' }
+      - { label: 'Type', name: 'type', widget: 'select', options: ['Full time', 'Part time', 'Remote'] }
+      - { label: 'Description', name: 'description', widget: 'markdown' }
   - name: 'blog'
     label: 'Blog'
     folder: 'content/blog'
